--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/lato": "^0.2.0",
     "@expo-google-fonts/oswald": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-firebase/app": "^14.3.1",
+    "@react-native-firebase/auth": "^14.3.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -20,6 +23,8 @@
     "expo": "^43.0.3",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.6.5",
+    "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
