--- a/package.json
+++ b/package.json
@@ -13,37 +13,38 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/lato": "^0.2.0",
     "@expo-google-fonts/oswald": "^0.2.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-firebase/app": "^14.3.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "~15.4.0",
     "@react-native-firebase/auth": "^14.3.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "camelize": "^1.0.0",
-    "expo": "^43.0.3",
-    "expo-font": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^46.0.0",
+    "expo-cli": "^6.0.8",
+    "expo-font": "~10.2.0",
+    "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.5",
-    "lottie-react-native": "4.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-maps": "0.28.1",
+    "lottie-react-native": "5.1.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-paper": "^4.10.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-svg": "12.1.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.13.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "^0.62.2",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
